--- a/package.json
+++ b/package.json
@@ -8,14 +8,15 @@
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "eslint --fix \"**/*.{ts,tsx}\"",
-    "serve": "json-server -d 1500 -p 3333 data.json"
+    "serve": "json-server -d 1000 -p 3333 data.json"
   },
   "dependencies": {
     "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "styled-components": "^5.3.1"
+    "styled-components": "^5.3.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^16.10.2",
